# gl-bindings

./: .gitignore  CMakeLists.txt  main.cpp
extDeps/glad/: CMakeLists.txt  glad.c
extDeps/glad/include/glad/: glad.h
glb/: Exception.h  Shader.cpp  Shader.h
